--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -53,7 +53,7 @@
           </button>
         </div>
       </div>
-      <table id="dataTable" class="ui small celled table nowrap" style="width: 100%;">
+      <table id="dataTable" class="ui small celled table" style="width: 100%;">
         <thead>
           <tr>
             <!-- <th></th> -->
