commit  new mockup

--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -134,7 +134,7 @@
                         routerLinkActive="active ">ตรวจการเบิกค่าสาธารณูปโภค</a>
                     <a class="item " [routerLink]="[ '/int06/8'] " *ngIf="authService.renderByPage('int06/8')"
                         routerLinkActive="active ">บันทึกข้อมูลการเบิกค่าสาธารณูปโภค</a>
-                    <a class="item " [routerLink]="[ '/???'] " *ngIf="authService.renderByPage('???')" routerLinkActive="active ">รายงานตัดปีเงินงบประมาณ
+                    <a class="item " [routerLink]="[ '/int06/12'] " *ngIf="authService.renderByPage('int06/12')" routerLinkActive="active ">รายงานตัดปีเงินงบประมาณ
                         - เงินนอกงบประมาณ</a>
                 </div>
             </div>
