--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-10/int06-10-1/int06-10-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-10/int06-10-1/int06-10-1.component.html
@@ -1,7 +1,7 @@
 <div class="ui grid">
   <div class="sixteen wide column">
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>บันทึกรายการโอนเงิน </span>
+      <span>บันทึกรายการขอเบิก </span>
     </div>
 
     <div class="ui attached segment">
