บันทึกค่าใช้จ่าย และ ตรวจสอบค่าใช้จ่าย int06-2 int06-1

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-3/int06-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-3/int06-1-3.component.html
@@ -17,7 +17,7 @@
           <div class="four wide field ">
             <select class="ui dropdown" [(ngModel)]="form.sector" name="sector" id="sector">
               <option value="">เลือก</option>
-              <option value="1">Male</option>
+              <option *ngFor="let item of sectorList" value="{{item.lovId}}">{{item.typeDescription}}</option>
             </select>
           </div>
           <div class="two wide field ">
