--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-1/int06-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-2-1/int06-2-1.component.html
@@ -28,9 +28,9 @@
         </div>
         <br><br>
         <div class="ui stackable center aligned page grid">
-          <button class="ui mini primary button" type="button" (click)="search()"> ค้นหา</button>
-          <button class="ui mini gray button" type="button" (click)="clear()">ล้างข้อมูล</button>
-          <button class="ui mini primary button" type="button" routerLink="/int06/1/2-2"> เพิ่มข้อมูล</button>
+          <button class="ui mini primary button" type="button" (click)="search()"><i class="search icon"></i> ค้นหา</button>
+          <button class="ui mini gray button" type="button" (click)="clear()"><i class="sync icon"></i> ล้างข้อมูล</button>
+          <button class="ui mini green button" type="button" routerLink="/int06/1/2-2"><i class="plus icon"></i> เพิ่มข้อมูล</button>
         </div><br>
       </form>
     </div>
