--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -122,7 +122,7 @@
                 <i class="dropdown icon "></i> ตรวจสอบเบิกจ่าย
                 <div class="menu ">
                     <a class="item " [routerLink]="[ '/int06/1/1'] " *ngIf="authService.renderByPage('int06/1')" routerLinkActive="active ">ตรวจสอบข้อมูลค่าใช้จ่าย</a>
-                    <a class="item " [routerLink]="['/int06/10'] " *ngIf="authService.renderByPage('int06/10')" routerLinkActive="active ">บันทึกข้อมูลค่าใช้จ่าย</a>
+                    <a class="item " [routerLink]="['/int06/1/2-1'] " *ngIf="authService.renderByPage('int06/1/2-1')" routerLinkActive="active ">บันทึกข้อมูลค่าใช้จ่าย</a>
                     <a class="item " [routerLink]="[ '/int06/2'] " *ngIf="authService.renderByPage('int06/2')" routerLinkActive="active ">ตรวจสอบเปรียบเทียบสรุปรายการขอเบิกกับงบทดลอง</a>
                     <a class="item " [routerLink]="[ '/int06/3'] " *ngIf="authService.renderByPage('int06/3')" routerLinkActive="active ">ตรวจเบิกจ่าย</a>
                     <a class="item " [routerLink]="[ '/int06/9'] " *ngIf="authService.renderByPage('int06/9')" routerLinkActive="active ">บันทึกข้อมูลรับโอนเงิน</a>
