--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-2/int06-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-2/int06-1-2.component.html
@@ -1,5 +1,24 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
-
+<div class="ui ordered steps full-width">
+    <div class="completed step">
+      <div class="content">
+        <div class="title">งบทดลอง</div>
+        <div class="description">อัปโหลดสำเร็จ</div>
+      </div>
+    </div>
+    <div class="active step">
+      <div class="content">
+        <div class="title">บัญชีแยกประเภท</div>
+        <div class="description">กำลังดำเนินการ</div>
+      </div>
+    </div>
+    <div class="disabled  step">
+      <div class="content">
+        <div class="title">ตรวจสอบค่าใช้จ่าย</div>
+        <div class="description">รอดำเนินการ</div>
+      </div>
+    </div>
+  </div>
 <div class="ui grid">
     <div class="sixteen wide column">
         <div class="ui top attached header">
