int06 และ Utils => format money

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-3/int06-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-3/int06-1-3.component.html
@@ -116,3 +116,19 @@
         </thead>
       </table><br>
     </div>
+
+    <!-- modal detail -->
+    <div class="ui modal" id="detail">
+      <i class="close icon"></i>
+      <div class="header">
+        หมายเตุ
+      </div>
+      <div class="content" id="des">
+        
+      </div>
+      <div class="actions">
+        <div class="ui grey deny button">
+          ปิด
+        </div>
+      </div>
+    </div>
