ตรวจสอบจ่าใช้จ่าย ia int06-1

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-1/int06-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-1/int06-1-1.component.html
@@ -60,17 +60,17 @@
         <div class="ui attached center segment {{tableLoading ? 'loading' : ''}} ">
             <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
                 <thead>
-                    <tr style="text-align: center;">
-                        <th rowspan="2">ลำดับ</th>
-                        <th colspan="2">บัญชีแยกประเภท</th>
-                        <th rowspan="2">ยอดยกมา</th>
-                        <th rowspan="2">เดบิต</th>
-                        <th rowspan="2">เครดิต</th>
-                        <th rowspan="2">ยอดยกไป</th>
+                    <tr>
+                        <th style="text-align: center !important;" rowspan="2">ลำดับ</th>
+                        <th style="text-align: center !important;" colspan="2">บัญชีแยกประเภท</th>
+                        <th style="text-align: center !important;" rowspan="2">ยอดยกมา</th>
+                        <th style="text-align: center !important;" rowspan="2">เดบิต</th>
+                        <th style="text-align: center !important;" rowspan="2">เครดิต</th>
+                        <th style="text-align: center !important;" rowspan="2">ยอดยกไป</th>
                     </tr>
                     <tr>
-                        <th>เลขที่บัญชีแยกประเภท</th>
-                        <th>ชื่อบัญชีแยกประเภท</th>
+                        <th style="text-align: center !important">เลขที่บัญชีแยกประเภท</th>
+                        <th style="text-align: center !important">ชื่อบัญชีแยกประเภท</th>
 
                     </tr>
                 </thead>
