--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-3/int06-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-1/int06-1-3/int06-1-3.component.html
@@ -63,7 +63,7 @@
           </div>
         </div><br><br>
         <div class="ui stackable center aligned page grid">
-          <button class="ui mini blue button" type="button" (click)="search()"><i class="search icon"></i>ค้นหา</button>
+          <button class="ui mini green button" type="button" (click)="search()"><i class="clipboard check icon"></i>ตรวจสอบ</button>
           <button class="ui mini gray button " type="button" (click)="clear()"><i class="sync icon"></i>ล้างข้อมูล</button>
         </div><br>
       </form>
@@ -74,44 +74,44 @@
     <div class="ui segment">
       <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
         <thead>
-          <tr style="text-align: center;">
-            <th rowspan="2">ลำดับ</th>
-            <th rowspan="2">รหัสบัญชี</th>
-            <th rowspan="2">ชื่อบัญชี</th>
-            <th colspan="3">กิจกรรม (รับโอนจากกรมฯ)</th>
-            <th rowspan="2">รวมรับ</th>
-            <th colspan="3">การเบิกจ่ายจริงแยกตามกิจกรรมตามทะเบียนคุม</th>
-            <th rowspan="2">รวมรับ</th>
-            <th rowspan="2">งบทดลอง</th>
-            <th rowspan="2">ผลต่างงบทดลอง</th>
-            <th rowspan="2">บัญชีแยกประเภท</th>
-            <th rowspan="2">ผลต่างบัญชีแยกประเภท</th>
-            <th colspan="3">คงเหลือ</th>
-            <th rowspan="2">คงเหลือรวม</th>
-            <th colspan="4">ถัวจ่าย</th>
-            <th colspan="2">เหลือสุทธิ</th>
-            <th rowspan="2">หมายเหตุ</th>
+          <tr style="text-align: center !important">
+            <th style="text-align: center !important" rowspan="2">ลำดับ</th>
+            <th style="text-align: center !important" rowspan="2">รหัสบัญชี</th>
+            <th style="text-align: center !important" rowspan="2">ชื่อบัญชี</th>
+            <th style="text-align: center !important" colspan="3">กิจกรรม (รับโอนจากกรมฯ)</th>
+            <th style="text-align: center !important" rowspan="2">รวมรับ</th>
+            <th style="text-align: center !important" colspan="3">การเบิกจ่ายจริงแยกตามกิจกรรมตามทะเบียนคุม</th>
+            <th style="text-align: center !important" rowspan="2">รวมรับ</th>
+            <th style="text-align: center !important" rowspan="2">งบทดลอง</th>
+            <th style="text-align: center !important; background-color: teal" rowspan="2">ผลต่างงบทดลอง</th>
+            <th style="text-align: center !important" rowspan="2">บัญชีแยกประเภท</th>
+            <th style="text-align: center !important; background-color: teal" rowspan="2">ผลต่างบัญชีแยกประเภท</th>
+            <th style="text-align: center !important" colspan="3">คงเหลือ</th>
+            <th style="text-align: center !important" rowspan="2">คงเหลือรวม</th>
+            <th style="text-align: center !important" colspan="4">ถัวจ่าย</th>
+            <th style="text-align: center !important" colspan="2">เหลือสุทธิ</th>
+            <th style="text-align: center !important" rowspan="2">หมายเหตุ</th>
           </tr>
           <tr>
-            <th>การบริหาร</th>
-            <th>ปราบปราม</th>
-            <th>เงินนอกงปม.</th>
-
-            <th>การบริหาร</th>
-            <th>ปราบปราม</th>
-            <th>เงินนอกงปม.</th>
-
-            <th>การบริหาร</th>
-            <th>ปราบปราม</th>
-            <th>เงินนอกงปม.</th>
-
-            <th>ถัวเป็นเงิน</th>
-            <th>ถัวเป็นให้</th>
-            <th>ถัวมาเงิน</th>
-            <th>ถัวมาจาก</th>
-
-            <th>เงินงบ</th>
-            <th>เงินนอก</th>
+            <th style="text-align: center !important">การบริหาร</th>
+            <th style="text-align: center !important">ปราบปราม</th>
+            <th style="text-align: center !important">เงินนอกงปม.</th>
+ 
+            <th style="text-align: center !important">การบริหาร</th>
+            <th style="text-align: center !important">ปราบปราม</th>
+            <th style="text-align: center !important">เงินนอกงปม.</th>
+ 
+            <th style="text-align: center !important">การบริหาร</th>
+            <th style="text-align: center !important">ปราบปราม</th>
+            <th style="text-align: center !important">เงินนอกงปม.</th>
+ 
+            <th style="text-align: center !important">ถัวเป็นเงิน</th>
+            <th style="text-align: center !important">ถัวเป็นให้</th>
+            <th style="text-align: center !important">ถัวมาเงิน</th>
+            <th style="text-align: center !important">ถัวมาจาก</th>
+ 
+            <th style="text-align: center !important">เงินงบ</th>
+            <th style="text-align: center !important">เงินนอก</th>
           </tr>
         </thead>
       </table><br>
