--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-2/int07-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-2/int07-2.component.html
@@ -1,341 +1,35 @@
-<div class="ui attached segment" >
-    <table class="ui  small celled table">
-      <thead>
-        <tr style="text-align: center;">
-          <th>เลขที่บัญชีแยกประเภท</th>
-          <th>ชื่อบัญชีแยกประเภท</th>
-          <th>ยอดยกมา</th>
-          <th>เดบิต</th>
-          <th>เครดิต</th>
-          <th>ยอดยกไป</th>         
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1101010101</td>
-          <td>เงินสดในมือ</td>
-          <td>0</td>
-          <td>224,965.42</td>
-          <td>-224,965.42</td>
-          <td>0</td>
-       
-        </tr>
-        <tr>
-          <td>1101010104</td>
-          <td>เงินทดรองราชการ</td>
-          <td>5,000.00</td>
-          <td>0</td>
-          <td>0</td>
-          <td>5,000.00</td>
-         
-        </tr>
-        <tr>
-          <td>1101030199</td>
-          <td>เงินฝากไม่มีรายตัว</td>
-          <td>0</td>
-          <td>394,171.95</td>
-          <td>-394,171.95</td>
-          <td>345</td>
-        
-        </tr>
-        <tr>
-          <td>1205010101</td>
-          <td>อาคารพักอาศัย</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-         
-        </tr>
-        <tr>
-          <td>1205010102</td>
-          <td>พักอาคารพักอาศัย</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-        
-        </tr>
-        <tr>
-          <td>2111020199</td>
-          <td>เงินรับฝากอื่น</td>
-          <td>-79,779.72</td>
-          <td>827,038.17</td>
-          <td>-830,354.76</td>
-          <td>-83,096.31</td>
-         
-        </tr>
-        <tr>
-          <td>2112010199</td>
-          <td>เงินประกันอื่น</td>
-          <td>-5,000.00</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-5,000.00</td>
-        
-        </tr>
-        <tr>
-          <td>2116010104</td>
-          <td>เบิกเกินฯรอนำส่ง</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-         
-        </tr>
-        <tr>
-          <td>2202010101</td>
-          <td>งทร.รับฯ-ดำเนินงาน</td>
-          <td>-5,000.00</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-5,000.00</td>
-        
-        </tr>
-        <tr>
-          <td>2213010101</td>
-          <td>ร/ดรอรับรู้</td>
-          <td>-78,776.74</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-78,776.74</td>
-      
-        </tr>
-        <tr>
-          <td>3101010101</td>
-          <td>ร/ดสูงต่ำคชจ.สุทธิ</td>
-          <td>459,711.76</td>
-          <td>0</td>
-          <td>0</td>
-          <td>459,711.76</td>
-        
-        </tr>
-        <tr>
-          <td>3102010101</td>
-          <td>ร/ดสูงต่ำคชจ.สะสม</td>
-          <td>-8,231,397.24</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-8,231,397.24</td>
-         
-        </tr>
-        <tr>
-          <td>3102010102</td>
-          <td>ผลสะสมแก้ไขผิดพลาด</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-       
-        </tr>
-        <tr>
-          <td>3102010102</td>
-          <td>ผลสะสมแก้ไขผิดพลาด</td>
-          <td>0</td>
-          <td>64,737.80</td>
-          <td>-64,737.80</td>
-          <td>394</td>
-        
-        </tr>
-        <tr>
-          <td>3105010101</td>
-          <td>ทุนของหน่วยงาน</td>
-          <td>-450,584.45</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-450,584.45</td>
-        
-        </tr>
-        <tr>
-          <td>4102020101</td>
-          <td>ร/ด-ภาษีนำเข้า</td>
-          <td>-14,280.00</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-14,280.00</td>
-      
-        </tr>
-        <tr>
-          <td>4102020103</td>
-          <td>รายได้ภาษีสุรา</td>
-          <td>-51,469,007.90</td>
-          <td>0</td>
-          <td>-4,843,060.60</td>
-          <td>-56,312,068.50</td>
-          
-        </tr>
-        <tr>
-          <td>4102020105</td>
-          <td>ร/ดภาษีNon-alcoholic</td>
-          <td>-96,789.88</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-96,789.88</td>
-        
-        </tr>
-        <tr>
-          <td>4102020106</td>
-          <td>รายได้ภาษียาสูบ</td>
-          <td>-6,266,080.00</td>
-          <td>0</td>
-          <td>-781,100.00</td>
-          <td>-7,047,180.00</td>
-        
-        </tr>
-        <tr>
-          <td>4308010118</td>
-          <td>รด.ระหว่างกันในกรม</td>
-          <td>-1,970,773.94</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-1,970,773.94</td>
-         
-        </tr>
-        <tr>
-          <td>5101010108</td>
-          <td>ค่าล่วงเวลา</td>
-          <td>74,620.00</td>
-          <td>8,000.00</td>
-          <td>0</td>
-          <td>82,620.00</td>
-      
-        </tr>
-        <tr>
-          <td>5101010113</td>
-          <td>ค่าจ้าง</td>
-          <td>997,000.00</td>
-          <td>96,364.52</td>
-          <td>0</td>
-          <td>1,093,364.52</td>
-        
-        </tr>
-        <tr>
-          <td>5101010116</td>
-          <td>เงินค่าครองชีพ</td>
-          <td>77,850.00</td>
-          <td>7,075.32</td>
-          <td>0</td>
-          <td>84,925.32</td>
-         
-        </tr>
-        <tr>
-          <td>5203010136</td>
-          <td>จำหน่ายที่อยู่ราชฯ</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-         
-        </tr>
-        <tr>
-          <td>5203010139</td>
-          <td>จำหน่ายปลูกสร้างราชฯ</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-         
-        </tr>
-        <tr>
-          <td>5209010112</td>
-          <td>T/Eเบิกเกินส่งคืน</td>
-          <td>1,300.00</td>
-          <td>0</td>
-          <td>0</td>
-          <td>1,300.00</td>
-        
-        </tr>
-        <tr>
-          <td>5210010102</td>
-          <td>T/E-โอนเงินให้สรก.</td>
-          <td>1,746,442.66</td>
-          <td>166,541.59</td>
-          <td>0</td>
-          <td>1,912,984.25</td>
-        
-        </tr>
-        <tr>
-          <td>5210010103</td>
-          <td>T/E-โอนร/ดผ/ดให้บก.</td>
-          <td>62,006,091.77</td>
-          <td>5,833,123.39</td>
-          <td>0</td>
-          <td>67,839,215.16</td>
-        
-        </tr>
-        <tr>
-          <td>5210010105</td>
-          <td>T/E-ปรับเงินฝากคลัง</td>
-          <td>3,255,654.70</td>
-          <td>147,645.54</td>
-          <td>0</td>
-          <td>3,403,300.24</td>
-       
-        </tr>
-        <tr>
-          <td>5210010112</td>
-          <td>T/Eรายได้รอนำส่งคลัง</td>
-          <td>-4.82</td>
-          <td>0</td>
-          <td>0</td>
-          <td>-4.82</td>
-      
-        </tr>
-        <tr>
-          <td>5210010118</td>
-          <td>TE-ภายในกรม</td>
-          <td>129,598.16</td>
-          <td>0</td>
-          <td>0</td>
-          <td>129,598.16</td>
-    
-        </tr>
-        <tr>
-          <td>6201010101</td>
-          <td>พัก เงินฝากคลัง</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-         
-        </tr>
-        <tr>
-          <td>6307010101</td>
-          <td>Convสำนักงาน</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-       
-        </tr>
-        <tr>
-          <td>6307010102</td>
-          <td>ConvAcc-Depre สำนักง</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-          <td>0</td>
-         
-        </tr>
-        <tr>
-          <td>ผลรวม</td>
-          <td>&nbsp;</td>
-          <td>0</td>
-          <td>15,999,140.59</td>
-          <td>-15,999,140.59</td>
-          <td>0</td>
-         
-        </tr>
-      </tbody>
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+<div class="ui attached segment {{ loadingTable? 'loading': '' }}">
+    <table class="ui  small celled table" id="dataTable">
+        <thead>
+            <tr>
+                <th style="text-align: center;">เลขที่บัญชีแยกประเภท</th>
+                <th style="text-align: center;">ชื่อบัญชีแยกประเภท</th>
+                <th style="text-align: center;">ยอดยกมา</th>
+                <th style="text-align: center;">เดบิต</th>
+                <th style="text-align: center;">เครดิต</th>
+                <th style="text-align: center;">ยอดยกไป</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th></th>
+                <th>ผลรวม</th>
+                <th class="sum"></th>
+            </tr>
+        </tfoot>
     </table>
+
     <div class="ui center aligned grid">
         <div class="eight wide column">
             <button class="ui mini primary button width-100">    
                 <i class="print  icon"></i>
              Export
-            </button>  
-             
+            </button>
         </div>
-      </div>
-  
-  </div>
+    </div>
+
+</div>
