--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -42,32 +42,22 @@
         <div class="ui segment">
             <br>
             <div style="overflow-x: scroll;">
-                <table id="table1" class="ui small celled table striped selectable" style="width: 170%;">
+                <table id="dataTable" class="ui small celled table striped selectable" style="width: 120%;">
                     <thead>
                         <tr class="center aligned">
                             <th>ลำดับที่</th>
-                            <th>วันที่ออกใบอนุญาต </th>
-                            <th>วันที่นำส่งเงิน <br>(ระบบรายได้)</th>
+                            <th>วันที่ออกใบอนุญาต</th>
+                            <th>วันที่นำส่งเงิน (ระบบรายได้)</th>
                             <th>ประเภทใบอนุญาต</th>
                             <th>เลขแบบพิมพ์</th>
                             <th>เลขที่ใบอนุญาต</th>
-                            <th>เลขแบบพิมพ์</th>
-                            <th>เลขที่ใบอนุญาต</th>
                             <th>จำนวนเงินจากระบบ</th>
-                            <th>จำนวนเงิน
-                                <br>จากสำเนา
-                                <br>ใบอนุญาต</th>
-                            <th>จำนวนเงิน
-                                <br>ค่าธรรมเนียม
-                                <br> อปท. 10%</th>
-                            <th>จำนวนเงินค่า
-                                <br>มหาดไทย 10%</th>
+                            <th>จำนวนเงินจากสำเนาใบอนุญาต</th>
+                            <th>จำนวนเงินค่าธรรมเนียม อปท. 10%</th>
+                            <th>จำนวนเงินค่ามหาดไทย 10%</th>
                             <th>รวม</th>
-                            <th>วันที่
-                                <br>ใบอนุญาตมี
-                                <br>ผล</th>
-                            <th>วันที่หมดอายุ
-                                <br>ใบอนุญาต</th>
+                            <th>วันที่ใบอนุญาตมีผล</th>
+                            <th>วันที่หมดอายุใบอนุญาต</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -84,16 +74,16 @@
                         <a class="ui mini  button widtd-100" routerLink='/int01/2/1'>
                             <i class="arrow left icon"></i>กลับ
                         </a>
-                        <a class="ui mini primary button widtd-100"> 
-                                <i class="print icon"></i>                        
+                        <a class="ui mini primary button widtd-100">
+                            <i class="print icon"></i>
                             Export
                         </a>
                         <a class="ui mini primary button widtd-100">
-                                <i class="arrow save icon"></i>
+                            <i class="arrow save icon"></i>
                             บันทึก
                         </a>
                         <a class="ui mini primary button widtd-100" routerLink='/int01/2/3'>
-                                <i class="file alternate icon"></i>
+                            <i class="file alternate icon"></i>
                             รายงานใบอนุญาต
                         </a>
                     </div>
